bookstore/scripts/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore
  namespace: bookstore
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      containers:
        - name: bookstore
          image: registry.gitlab.com/st1611/frontend/bookstore:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
