bookstore/scripts/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstore
  namespace: bookstore
spec:
  type: NodePort
  selector:
    app: bookstore
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
